_sass/_base.scss
@import "_variables";

body {
  font-family: $primary-font;

  //TODO: remove this (fix for index page horizaontal scroll caused by .svg)
  overflow-x: hidden;
}

.bg-primary {
  background-color: $primary-color;
}
.bg-secondary {
  background-color: $secondary-color-light;
}
.bg-tertiary {
  background-color: $tertiary-color-light;
}
.bg-wave {
  background-repeat: no-repeat;
  background-position: 50% 105%;
  background-size: contain;
  @media (min-width: 580px) {
    background-image: url(/images/icons/background.svg);
  }
  @media (max-width: 579px) {
    background-image: url(/images/icons/background-mobile.svg);
  }
}

.z-index-2 {
  z-index: 2;
}
a {
  text-decoration: none;
}
.w-100 {
  width: 100%;
}
.mw-px-110 {
  max-width: 110px;
}
.mw-px-280 {
  max-width: 280px;
}
.mw-px-400 {
  max-width: 400px;
}
.w-33 {
  width: 33%;
}
.mw-100 {
  max-width: 100%;
}

.text-center {
  text-align: center;
}

.d-inline-block {
  display: inline-block;
}

.p-relative {
  position: relative;
}

.overflow {
  overflow: hidden;
}
.overflow-x {
  overflow-x: hidden;
}

@media (min-width: 1440px) {
  .overflow-x-xl {
    overflow-x: hidden;
  }
  .overflow-xl {
    overflow: hidden;
  }
}
@media (max-width: 1439px) {
  .mw-md-100 {
    max-width: 100%;
  }
  .h-md-auto {
    height: auto;
  }
}
@media (max-width: 991px) {
  .mw-lg-px-400 {
    max-width: 400px;
  }
}
.integrations-svg-wrapper {
  position: relative;
  bottom: -5px;
}
@media (min-width: 768px) {
  .integrations-svg-wrapper {
    position: absolute;
    left: 0;
    right: 0;
    margin: auto;
    bottom: -5px;
  }
}
@media (min-width: 580px) {
  .visible-xs {
    display: none;
  }
}

.visible-lg {
  display: none;
}
@media (min-width: 1024px) {
  .visible-lg {
    display: block;
  }
}

@media (max-width: 579px) {
  p {
    font-size: 12px;
  }
  .hidden-xs {
    display: none;
  }
  .mw-xs-px-100 {
    max-width: 100px;
  }
  .h-xs-auto {
    height: auto;
  }
}

.basket-right {
  transform: matrix(1, 0, 0, 1, 1400, -10);
}
.test-ani {
  position: absolute;
  left: calc((100% - 1440px) / 2 - 560px);
  top: 38px;
}
.hidden-test {
  @media (max-width: 1440px) {
    display: none;
  }
}
#coin_1,
#coin_2,
#cart2-with-coin {
  opacity: 0;
}
#in_cart1_with_coin,
#in_cart2_with_coin,
#in_cart3_with_coin,
#in_cart4_with_coin {
  opacity: 0;
}
.before-coin {
  @media (max-width: 991px) {
    display: none;
  }
}
.before-coin-mobile {
  @media (min-width: 992px) {
    display: none;
  }
}
.container-before-coin {
  width: 400px;
  @media (max-width: 991px) {
    width: 260px;
  }
}

.long-svg-wrapper {
  @media (min-width: 580px) {
    margin-top: -30px;
  }
  @media (min-width: 992px) {
    margin-top: -60px;
  }
  @media (min-width: 1440px) {
    margin-top: -90px;
  }
}

